# rust-graqhql-mongodb-terraform-aws-full-stack-starter-kit

./: Cargo.toml  README.md  docker-compose.yml
app/frontend/: .env.toml  Cargo.toml  index.html
app/frontend/graphql/: home.graphql
app/frontend/src/: core.rs  main.rs
app/frontend/src/pages/: home.rs
app/server/: .env  Cargo.toml
app/server/src/: lib.rs  main.rs  mod.rs
app/server/src/api/: mod.rs  mutation.rs  query.rs  schema.rs  subscription.rs
app/server/src/graphql/: mod.rs
app/server/src/graphql/mappers/: mod.rs
app/server/src/graphql/services/: mutation.rs  query.rs
app/server/src/graphql/types/: input.rs  mod.rs
app/server/src/repository/: mod.rs  schema.rs
app/server/src/server/: mod.rs
model/api/: Cargo.toml  build.rs  schema.graphql
src/: main.rs  mod.rs
src/api/: mod.rs  mutation.rs  query.rs  schema.rs
src/repository/: mod.rs  schema.rs
src/server/: mod.rs  routes.rs
