[package]
name = "rust-graqhql-terraform-aws-full-stack-starter-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Serializer
serde_json = "1.0.87"

# GraphQL
juniper = "0.15.10"

# Web
warp = "0.3.3"
hyper = {version = "0.14.23", features = ["full"]}

# Async
tokio = { version = "1.21.2", features = ["full"] }
