[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Artem Korolev"]

[package.metadata.workspaces]
independent = true

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8.2"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"
gloo = "0.8"

[build-dependencies]
api = { path = "../../model/api" }
