[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Artem Korolev"]

[package.metadata.workspaces]
independent = true

[dependencies]

# Logging
log = "0.4.17"

# Serialization / deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# GraphQL client
graphql_client = { version = "0.11.0", features = ["reqwest"] }
reqwest = "0.11.13"

# Wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8.2"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
once_cell = "1"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "Node",
    "HtmlBodyElement",
    "HtmlDocument",
    "HtmlElement",
    "Window",
]


[build-dependencies]
api = { path = "../../model/api" }
