[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Artem Korolev"]

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Serializer
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }

# GraphQL
juniper = "0.15.10"
juniper_subscriptions = "0.16.0"
juniper_hyper = "0.8.0"

# Web
hyper = {version = "0.14.23", features = ["full"]}

# Async
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"

# MongoDB
mongodb = "2.3.1"
bson = { version = "2.4.0", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
