[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Artem Korolev"]

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
server = { path = "../../app/server"}
